spacing fix

--- a/components/byu-header/byu-header-fouc.sass
+++ b/components/byu-header/byu-header-fouc.sass
@@ -24,7 +24,7 @@ byu-header:not(.byu-component-rendered)
       byu-menu
         grid-area: 4/1/5/9
         a:first-of-type
-          margin-left: 4.6em
+          margin-left: 3.2em
 
       &::before
         grid-area: 1/2/4/3
